Refactor codebase: - Create TokenService class with methods and corresponding tests - Implement AddressParagraphCreator class with methods - Enhance frontend functionality for improved user experience