@@ -4,9 +4,9 @@ import com.andwis.travel_with_anna.trip.expanse.ExpanseByCurrency;
 import com.andwis.travel_with_anna.trip.expanse.ExpanseCalculator;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public class BudgetMapper {
 
@@ -14,23 +14,24 @@ public class BudgetMapper {
         return new BudgetResponse(
                 budget.getBudgetId(),
                 budget.getCurrency(),
-                budget.getToSpend(),
+                budget.getBudgetAmount(),
                 budget.getTrip().getTripId()
         );
     }
 
     public static @NotNull List<ExpanseByCurrency> toExpansesByCurrency(@NotNull Map<String, ExpanseCalculator> expansesByCurrencyMap) {
-        List<ExpanseByCurrency> expanseByCurrencies = new java.util.ArrayList<>(expansesByCurrencyMap.entrySet().stream()
+        return convertToExpanseByCurrency(expansesByCurrencyMap);
+    }
+
+    private static @NotNull List<ExpanseByCurrency> convertToExpanseByCurrency(@NotNull Map<String, ExpanseCalculator> expansesByCurrencyMap) {
+        return expansesByCurrencyMap.entrySet().stream()
                 .map(entry -> ExpanseByCurrency.builder()
-                        .currency(entry.getKey())
+                        .currencyCode(entry.getKey())
                         .totalPrice(entry.getValue().getTotalPrice())
                         .totalPaid(entry.getValue().getTotalPaid())
                         .totalPriceInTripCurrency(entry.getValue().getTotalPriceInTripCurrency())
                         .totalPaidInTripCurrency(entry.getValue().getTotalPaidInTripCurrency())
                         .totalDebt(entry.getValue().getTotalDebt())
-                        .build())
-                .toList());
-        Collections.sort(expanseByCurrencies);
-        return expanseByCurrencies;
+                        .build()).sorted(ExpanseByCurrency::compareTo).collect(Collectors.toList());
     }
 }
